style: mobile fix logo stretch

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -119,14 +119,14 @@
 .mobile-container {
   display: none;
   padding: 1.75rem;
-  height: calc(100vh - 60px);
+  /*height: calc(100vh - 60px);*/
 }
 @media screen and (max-width: 690px) {
   .mobile-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 320px;
+    /*width: 320px;*/
   }
 }
 .mobile-container .page-title {
@@ -141,7 +141,8 @@
 }
 @media screen and (max-width: 690px) {
   .page-logo {
-    max-width: 85%;
+    /*max-width: 85%;*/
+    max-width: 160px;
   }
 }
 
